--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,11 @@
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600);
 
 html {
     color: #222;
-    font-size: 1em;
+    font-size: 18px;
     line-height: 1.4;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 ::-moz-selection {
@@ -38,6 +40,16 @@ fieldset {
     border: 0;
     margin: 0;
     padding: 0;
+}
+
+label {
+    font-size: 2.4rem;
+    display: inline-block;
+    margin-right: 8px;
+}
+
+input[type="text"] {
+    padding: 4px;
 }
 
 textarea {
