--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,12 +43,16 @@ fieldset {
 }
 
 label {
-    font-size: 2.4rem;
+    font-size: 1.4rem;
     display: inline-block;
     margin-right: 8px;
 }
 
 input[type="text"] {
+    padding: 4px;
+}
+
+button {
     padding: 4px;
 }
 
