--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -53,7 +53,10 @@ input[type="text"] {
 }
 
 button {
-    padding: 4px;
+    padding: 12px;
+    text-align: center;
+    font-size: 20px;
+    display: inline-block;
 }
 
 textarea {
@@ -85,6 +88,16 @@ textarea {
     max-height: 600px;
 }
 
+.cta {
+    text-align: center;
+    padding: 0 0 20px 0;
+}
+
+.cta p {
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+}
 
 
 /* ==========================================================================
