install google places helper via npm. create api key proxy for places api. make get request a module and use to return promise of key. alert key as proof of concept

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -88,6 +88,11 @@ textarea {
     max-height: 600px;
 }
 
+article {
+    width: 640px;
+    margin: 0 auto;
+}
+
 .cta {
     text-align: center;
     padding: 0 0 20px 0;
