--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -89,7 +89,6 @@ textarea {
 }
 
 article {
-    width: 640px;
     margin: 0 auto;
 }
 
@@ -102,6 +101,27 @@ article {
     width: 50%;
     margin: 0 auto;
     display: block;
+}
+
+.status-bar {
+    background-color: #CCCCCC;
+    padding: 8px;
+    min-height: 20px;
+    text-align: center;
+}
+
+.inactive {
+    position: relative;
+}
+
+.inactive:after {
+    position: absolute;
+    content: "";
+    left:0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,0.8);
 }
 
 
